Fixed navbar dropdown misalignment in Firefox (#194)
Closes #193

--- a/src/modules/navbar/navbar-item.component.scss
+++ b/src/modules/navbar/navbar-item.component.scss
@@ -10,7 +10,7 @@
     .sky-dropdown-button {
       border: none;
       color: $sky-nav-color;
-      display: block;
+      display: inline-block;
       padding: 16px 12px;
       text-decoration: none;
     }
